* V2.4.0.1
  * added --bash to docker:module to run bash in a container
  * removed outdated and unnecessary files
  * added --command flag to "run docker" to run a specific command such as
    ck run docker:xyz --command="ck show env"

* V2.4.0
  * added module "docker.template" to support adaptive CK containers
  * added rebuild function to module:docker to rebuild images (#145)
  * added support for multiple Docker tags in module:docker
    See example: https://github.com/octoml/mlops/tree/main/docker/ck-template-mlperf
  * added "default_org" key in Docker image to specify default organization
  * added "outdated" and "aging" keys in Docker images to warn user
    about a status of a given Docker image
  * added main CK and MLPerf repositories to Zenodo
    to ensure reproducibilty
  * added common function "tested" to mark CK entries as tested,
    i.e. "ck tested docker:mlperf-inference-v0.7.openvino"

* V2.3.0
  * improved "ck search" to search tags in entries with inheritance
  * fixed function "ck status"

* V2.2.0
  * enhancement of the inheritance mechanism and a few bug fixes:
    we keep original meta of a given entry when updating, copying or moving it
    rather than expanding it with all the base entries.

* V2.1.0
  * added support for basic inheritance in CK entries via "_base_entry" key.
    Useful to simplify program, package and soft modules.
    See https://github.com/ctuning/ck/issues/143 .
  * added program.template, soft.template and package.template modules
    to describe base entries for inheritance.

* V2.0.10
  * fixed a bug in the new installation function

* V2.0.9
  * added missing requirements.txt to the distro

* V2.0.8
  * added requirements.txt file with pyyaml
  * simplified setup.py script
  * added incubating projects to simplify CK

* V2.0.7
  * fixed problem in module:program to return error when pre/post processing fails
  * added more tests to catch bugs in program workflows
  * fixed a new bug in the program workflow